updated all notebooks

--- a/01_eodag_search.ipynb
+++ b/01_eodag_search.ipynb
@@ -16,6 +16,7 @@
     "from eodag import EODataAccessGateway\n",
     "from eodag import setup_logging\n",
     "from eodag.crunch import FilterProperty\n",
+    "from eodag import SearchResult\n",
     "\n",
     "from dotenv import dotenv_values\n",
     "\n",
@@ -135,12 +136,28 @@
     "    provider='cop_dataspace',\n",
     "    geom=extent,\n",
     "    #tileIdentifier=\"33UXP\",\n",
-    "    start='2023-04-09',\n",
-    "    end='2023-04-24',\n",
-    "    cloudCover=80 #You can specify cloudcover here or later when filtering.\n",
+    "    start='2021-04-01',\n",
+    "    end='2021-05-01',\n",
+    "    cloudCover=50 #You can specify cloudcover here or later when filtering.\n",
     ")\n",
     "\n",
     "print(f\"Got {len(search_results)} products and an estimated total number of {total_count} products.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Folium Map\n",
+    "fmap = folium.Map(location=(np.array([latmin, latmax]).mean(), np.array([lonmin, lonmax]).mean()), zoom_start=9)\n",
+    "folium.Rectangle(bounds=[[latmin, lonmin],[latmax, lonmax]], color=\"red\").add_to(fmap)\n",
+    "folium.GeoJson(\n",
+    "    data=search_results[:],  # SearchResult has a __geo_interface__ interface used by folium to get its GeoJSON representation, single results dont work (this [2:3] instead of [2])\n",
+    "    tooltip=folium.GeoJsonTooltip(fields=[\"title\"])\n",
+    ").add_to(fmap)\n",
+    "fmap"
    ]
   },
   {
@@ -158,33 +175,18 @@
     "        \n",
     "        date = product.properties['startTimeFromAscendingNode'][:16]\n",
     "        provider = product.provider\n",
+    "        tile = product.properties['title'].split('_')[5].lstrip('T')\n",
     "    \n",
     "        # Plot the quicklook\n",
     "        img = mpimg.imread(quicklook_path)\n",
     "        ax = fig.add_subplot(3, 4, i+1)\n",
-    "        ax.set_title(f'Product {i}\\n{date}\\n{provider}')\n",
+    "        ax.set_title(f'Product {i}\\n{date}\\n{provider} - {tile}')\n",
     "        ax.tick_params(top=False, bottom=False, left=False, right=False,\n",
     "                       labelleft=False, labelbottom=False)\n",
     "        plt.imshow(img)\n",
     "    plt.tight_layout()\n",
     "    \n",
     "plot_quicklooks(search_results)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Folium Map\n",
-    "fmap = folium.Map(location=(np.array([latmin, latmax]).mean(), np.array([lonmin, lonmax]).mean()), zoom_start=9)\n",
-    "folium.Rectangle(bounds=[[latmin, lonmin],[latmax, lonmax]], color=\"red\").add_to(fmap)\n",
-    "folium.GeoJson(\n",
-    "    data=search_results[:],  # SearchResult has a __geo_interface__ interface used by folium to get its GeoJSON representation, single results dont work (this [2:3] instead of [2])\n",
-    "    tooltip=folium.GeoJsonTooltip(fields=[\"title\"])\n",
-    ").add_to(fmap)\n",
-    "fmap"
    ]
   },
   {
@@ -217,15 +219,63 @@
     "\n",
     "#Filter for Cloudcover\n",
     "filtered_products = search_results.crunch(\n",
-    "    FilterProperty(dict(cloudCover=80, operator=\"lt\")))\n",
+    "    FilterProperty(dict(cloudCover=100, operator=\"lt\")))\n",
     "print(f\"{len(search_results) - len(filtered_products)} from {len(search_results)} products were filtered out by the property filter.\")\n",
     "\n",
     "#Filter already filterd products for online products\n",
     "online_products = filtered_products.filter_online()\n",
-    "print(f\"{len(filtered_products) - len(online_products)} products are offline.\\n{len(online_products)} products are online.\")\n",
+    "print(f\"{len(filtered_products) - len(online_products)} from {len(online_products)} products are offline and have been filtered out.\")\n",
     "\n",
     "plot_quicklooks(online_products)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Further Crunching\n",
+    "\n",
+    "In order to have some more speciffic filtering operations at hand we can use the Nameing Convention, which stores a lot of information about the individual products. This enables us to filter for things like the relative orbits, the Tile Numbers or the processing baseline. \n",
+    "\n",
+    "#### Compact Naming Convention\n",
+    "\n",
+    "The compact naming convention is arranged as follows:\n",
+    "\n",
+    "``MMM_MSIXXX_YYYYMMDDHHMMSS_Nxxyy_ROOO_Txxxxx_< Product Discriminator >.SAFE``\n",
+    "\n",
+    "The products contain two dates.\n",
+    "\n",
+    "The first date (YYYYMMDDHHMMSS) is the datatake sensing time.\n",
+    "The second date is the \"< Product Discriminator >\" field, which is 15 characters in length, and is used to distinguish between different end user products from the same datatake. Depending on the instance, the time in this field can be earlier or slightly later than the datatake sensing time.\n",
+    "The other components of the filename are:\n",
+    "\n",
+    "- ``MMM``: is the mission ID(S2A/S2B)\n",
+    "- ``MSIXXX``: MSIL1C denotes the Level-1C product level/ MSIL2A denotes the Level-2A product level\n",
+    "- ``YYYYMMDDHHMMSS``: the datatake sensing start time\n",
+    "- ``Nxxyy``: the Processing Baseline number (e.g. N0204)\n",
+    "- ``ROOO``: Relative Orbit number (R001 - R143)\n",
+    "- ``Txxxxx``: Tile Number field\n",
+    "- ``SAFE``: Product Format (Standard Archive Format for Europe)\n",
+    "\n",
+    "The `EODAG` Search Results therefore can be filtered (maybe in a slightly unconventional way) by many more features as originally intedned by `EODAG`. Essentially you can use any property a product has (`product.properties`) to make an filtering operation. Here are some examples."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sorting the search results for reproducibility (sorted by tile(5) and date (2))\n",
+    "products = SearchResult(sorted([p for p in online_products], key=lambda p: p.properties[\"title\"].split(\"_\")[5] + p.properties[\"title\"].split(\"_\")[2]))\n",
+    "\n",
+    "# Filter by Processing Pipeline\n",
+    "products = SearchResult([p for p in products if p.properties['id'].split('_')[3] == 'N0300'])\n",
+    "\n",
+    "# Filter by Tile\n",
+    "products = SearchResult([p for p in products if p.properties['id'].split('_')[5] == 'T33UXP'])\n",
+    "plot_quicklooks(products)"
    ]
   },
   {
@@ -246,20 +296,13 @@
     "# 4. Serialize (Save the filtered products as a GeoJSON File \n",
     "#               to save the state of a search and restore it later)\n",
     "\n",
-    "output_file = os.path.join(workspace_serialize, \"search_results.geojson\")\n",
+    "output_file = os.path.join(workspace_serialize, \"search_results3.geojson\")\n",
     "\n",
     "dag.serialize(\n",
     "    online_products,\n",
     "    filename=output_file\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
