--- a/02_eodag_des_post.ipynb
+++ b/02_eodag_des_post.ipynb
@@ -165,15 +165,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "products = [p for p in products if \"N0500\" in p.as_dict()[\"id\"]]\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -249,6 +240,17 @@
    "metadata": {},
    "source": [
     "#### Example: Simple NDVI Image (as shown by eodag documentation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sorting the search results for reproducibility (sorted by tile(5) and date (2))\n",
+    "\n",
+    "products = sorted([p for p in deserialized_search_results], key=lambda p: p.properties[\"title\"].split(\"_\")[5] + p.properties[\"title\"].split(\"_\")[2])"
    ]
   },
   {
@@ -347,8 +349,7 @@
     "        single_product = load_single_product(product=product, bands=bands)\n",
     "        single_ds.append(single_product)\n",
     "\n",
-    "    #ds = xr.merge(single_ds)\n",
-    "    ds = xr.combine_by_coords(single_ds)\n",
+    "    ds = xr.merge(single_ds)\n",
     "    return ds"
    ]
   },
@@ -357,7 +358,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Get all files for just one tile\n",
+    "tile_33UWP = sorted([p for p in products if 'T33UWP' == p.properties['title'].split('_')[5]], key=lambda p: p.properties[\"title\"].split(\"_\")[2])\n",
+    "\n",
+    "print(f'This tile has {len(tile_33UWP)} Timestamps.')"
+   ]
   },
   {
    "cell_type": "code",
@@ -369,7 +375,7 @@
     "bands_to_load = get_assets(paths[0], res=10)[1:-1]\n",
     "print(bands_to_load)\n",
     "\n",
-    "ds = load_multiple_timestamps(products=products, bands=['B04', 'B03', 'B02', 'B08', 'TCI'])\n",
+    "ds = load_multiple_timestamps(products=tile_33UWP, bands=bands_to_load)\n",
     "ds"
    ]
   },
@@ -380,7 +386,7 @@
    "outputs": [],
    "source": [
     "# Plotting the True Color Image (TCI)\n",
-    "ds['TCI'].loc[ds['TCI'].time[1]].plot.imshow()"
+    "ds['TCI'].loc[ds['TCI'].time[2]].plot.imshow()"
    ]
   },
   {
@@ -405,6 +411,13 @@
     "single_img = ds.sel(time=dt.date(2023, 3, 16), method='nearest')\n",
     "single_img"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
