--- a/03_eodag_img_pro.ipynb
+++ b/03_eodag_img_pro.ipynb
@@ -114,7 +114,7 @@
    "outputs": [],
    "source": [
     "# Deserialize the Search Results\n",
-    "output_file = os.path.join(workspace_serialize, \"search_results.geojson\")\n",
+    "output_file = os.path.join(workspace_serialize, \"search_results2.geojson\")\n",
     "deserialized_search_results = dag.deserialize_and_register(output_file)\n",
     "\n",
     "print(f\"Got {len(deserialized_search_results)} deserialized products.\")"
@@ -208,26 +208,12 @@
     "    return ds\n",
     "\n",
     "def load_multiple_timestamps(products, bands:list):\n",
-    "    loaded_data = {}\n",
-    "    # Combine multiple Dataarrays into one Dataset\n",
-    "    for band in bands:\n",
-    "        single_band_ts = []\n",
-    "        # Load one Band of each product and concat them into an xarray Dataarray\n",
-    "        for prod in products: \n",
-    "            data = prod.get_data(band=band, **common_params)\n",
-    "            data = data.squeeze()\n",
+    "    single_ds = []\n",
+    "    for product in products:\n",
+    "        single_product = load_single_product(product=product, bands=bands)\n",
+    "        single_ds.append(single_product)\n",
     "\n",
-    "            time_str = prod.properties['startTimeFromAscendingNode'][:-1] #Remove Timezone info\n",
-    "            date = pd.to_datetime([time_str])\n",
-    "\n",
-    "            data = data.expand_dims(time=date)\n",
-    "            data.name = band\n",
-    "            single_band_ts.append(data)\n",
-    "            \n",
-    "        ts =  xr.concat(single_band_ts, dim='time')\n",
-    "        loaded_data[band] = ts   \n",
-    "\n",
-    "    ds = xr.Dataset(loaded_data)\n",
+    "    ds = xr.merge(single_ds)\n",
     "    return ds"
    ]
   },
@@ -237,8 +223,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Loading multiple Bands into a dataset with multiple Timestamps\n",
-    "ds = load_multiple_timestamps(products=products, bands=['B04', 'B03', 'B02', 'B08', 'TCI'])"
+    "# Get Products from same Tile\n",
+    "tile_33UWP = sorted([p for p in products if 'T33UWP' == p.properties['title'].split('_')[5]], key=lambda p: p.properties[\"title\"].split(\"_\")[2])\n"
    ]
   },
   {
@@ -247,7 +233,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "products[0]"
+    "# Loading multiple Bands into a dataset with multiple Timestamps\n",
+    "ds = load_multiple_timestamps(products=tile_33UWP, bands=['B04', 'B03', 'B02', 'B08', 'TCI'])\n",
+    "ds"
    ]
   },
   {
@@ -279,32 +267,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load Bands 4 and 8 into memory\n",
-    "RED = products[0].get_data(band=\"B04\", **common_params)\n",
-    "NIR = products[0].get_data(band=\"B08\", **common_params)\n",
-    "\n",
-    "NDVI = normalized_difference(NIR, RED)\n",
-    "\n",
-    "NDVI.plot(cmap=\"RdYlGn\", center=False, size=6)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "NIR"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Select a single Timestamp from the Dataset (both of the following methods work)\n",
-    "single_image = ds.sel(time=dt.datetime(2023, 3, 18), method='nearest')"
+    "single_image = ds.sel(time=dt.datetime(2024, 5, 1), method='nearest')"
    ]
   },
   {
@@ -396,36 +360,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#single_image['TCI'].plot.imshow()\n",
-    "\n",
-    "single_image['B02'].plot.imshow()\n",
-    "np.unique(single_image['B02'])"
+    "histogram(rgb_raw, nbins=6)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "single_image['TCI'].plot.imshow()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "histogram(rgb_raw, nbins=3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -438,7 +374,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### False Color Image"
+    "To fix this problem we can increase the contrast of the image. To do this we implement the following functions, which will be needed for processing your image. For more details on how these functions work and why we need them to increase contrast and correctly encode the data, take a look at https://www.cg.tuwien.ac.at/courses/EinfVisComp/Skriptum/SS13/EVC-11%20Point%20Operations.pdf for a great overview. In your own Code it might be helpful, if you put those functions in a Python script and import the script into your code."
    ]
   },
   {
@@ -447,18 +383,222 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Select a single Timestamp from the Dataset (both of the following methods work)\n",
+    "def auto_clip(I, percentile=0.02, pooled=True):\n",
+    "    \"\"\" \n",
+    "    Calculates the quantiles of I using the percentile parameter and clips the values using the clip function defined below.\n",
+    "    \n",
+    "    Modifies I\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    I : np.array(rows, cols, bands)\n",
+    "        Image array.\n",
+    "    percentile : float, optional\n",
+    "        Percentile defining the clipping boundaries of I in terms of its distribution (defaults to 0.02). \n",
+    "    pooled: if True, computes the pooled percentile over all band\n",
+    "            (default, use this to keep the relative intensities of the bands for natural looking images)    \n",
+    "            if False, computes the percentiles for each band individually\n",
+    "            (use this - in conjunction with stretch - to bring the different bands into a comparable range, e.g. for false colour images)\n",
+    "        \n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    np.array : \n",
+    "        Auto-clipped image data.\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    if pooled:\n",
+    "        v_min = np.nanquantile(I, percentile)\n",
+    "        v_max = np.nanquantile(I, 1 - percentile)\n",
+    " \n",
+    "    else:\n",
+    "        tmp = I.reshape(-1, I.shape[-1]) #collapes image x,y 2d-array into a 1d-array\n",
+    "        v_min = np.nanquantile(tmp, percentile, axis=0)\n",
+    "        v_max = np.nanquantile(tmp, 1 - percentile, axis=0)\n",
+    "        \n",
+    "    return clip(I, v_min, v_max)        \n",
     "\n",
-    "single_image = ds.sel(time=dt.datetime(2023, 3, 16), method='nearest')\n",
-    "#single_image = ds.sel(time='2023-03-16', method='nearest')\n",
+    "def clip(I, v_min, v_max):\n",
+    "    \"\"\" \n",
+    "    Performs clipping (dt. \"Histogrammbegrenzung\")\n",
+    "    Sets all values in I that are outside of [v_min, v_max] to the corresponding boundary.\n",
     "\n",
-    "#single_image"
+    "    \n",
+    "    Modifies I\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    I : np.array\n",
+    "        Image array.\n",
+    "    v_min : scalar or array\n",
+    "        Lower clipping boundary for each band\n",
+    "    v_max : scalar or array\n",
+    "        lower clipping boundary for each band\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    np.array : \n",
+    "        Clipped image data.\n",
+    "        \n",
+    "    \"\"\"\n",
+    "        \n",
+    "    tmp = I.reshape(-1, I.shape[-1]) #collapes image x,y 2d-array into a 1d-array         \n",
+    "    if np.isscalar(v_min):\n",
+    "        tmp[tmp < v_min] = v_min\n",
+    "        tmp[tmp > v_max] = v_max\n",
+    "    else:\n",
+    "        idx = np.where(tmp < v_min)\n",
+    "        tmp[idx]=v_min[idx[1]]\n",
+    "        idx = np.where(tmp > v_max)\n",
+    "        tmp[idx]=v_max[idx[1]]        \n",
+    "    \n",
+    "    return I\n",
+    "            \n",
+    "def stretch(I, p_min, p_max, pooled=True):\n",
+    "    \"\"\"\n",
+    "    Performs histogram stretching or normalisation (dt. \"Spreizung\")\n",
+    "    Computes and applies an affine transformation of values in I to the range [p_min, p_max]. \n",
+    "    For floating point images to be displayed with pylab.imshow(), p_min=0, p_max=1\n",
+    "    should be chosen.\n",
+    "    \n",
+    "    Modifies I\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    I : np.array\n",
+    "        Image array.\n",
+    "    p_min : number\n",
+    "        Lower boundary of the output range.\n",
+    "    p_max : number\n",
+    "        Upper  boundary of the output range.\n",
+    "    pooled: if True, the transformation is computed for and applied to all bands simultaneously  \n",
+    "            if False, -\"- to the individual bands separately\n",
+    "    Returns\n",
+    "    -------\n",
+    "    np.array : \n",
+    "        Normalised image data within the range [p_min, p_max].\n",
+    "    \n",
+    "    \"\"\"\n",
+    "\n",
+    "    tmp = I.reshape(-1, I.shape[-1]) #collapes image x,y 2d-array into a 1d-array   \n",
+    "\n",
+    "    if pooled:    \n",
+    "        q_min = np.nanmin(I)\n",
+    "        q_max = np.nanmax(I)\n",
+    "\n",
+    "    else:\n",
+    "             \n",
+    "        q_min = np.nanmin(tmp, axis = 0)\n",
+    "        q_max = np.nanmax(tmp, axis = 0)        \n",
+    "\n",
+    "    tmp[:] =  (p_max - p_min) * (tmp - q_min) / (q_max - q_min) + p_min\n",
+    "    return I"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "First we can use the `auto_clip()` or `clip()` function to set values of intensity which are outside of a boundary to the boundary border: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rgb_clipped = auto_clip(rgb_raw.copy(), percentile=0.05, pooled = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can create a histogram with the clipped data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "histogram(rgb_clipped, nbins=6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can see that the histogram now has clear borders, and all the values below/above these borders have been set to the border values. You can play around clipping fewer/more values by setting the percentile value in the `auto_clip()` function. The `pooled` parameter sets if the bands get clipped individually (`=FALSE`) or as a group (`=TRUE`).\n",
+    "\n",
+    "As the intensity of the values is still too low after clipping we have to stretch the values to spread between 0 and 1. We can do this by using the `stretch()` function. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rgb_clipped_stretched = stretch(rgb_clipped.copy(), 0, 1, pooled = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "histogram(rgb_clipped_stretched, nbins=6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "ax.imshow(rgb_clipped_stretched)\n",
+    "ax.set_title(\"rgb clipped stretched\")\n",
+    "ax.set_axis_off()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If the final image doesnt look natural or still seems too dark try playing around with the percentile value or set the intensity value manually with the `clip()` function instead of `auto_clip()`. If an individual band has a higher intensity compared to the others try setting `pooled` to `=FALSE` when clipping and stretching. \n",
+    "\n",
+    "You can also use `np.log()` on the raw rgb image before clipping and stretching it to increase contrast.\n",
+    "\n",
+    "You can see what happens when we play around with the `percentile` parameter in the `auto_clip` function or use the `np.log` function below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rgb_clipped_stretched_log = stretch(auto_clip(np.log(rgb_raw.copy()), percentile=0.05),0,1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### False Color Image"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we want to analyze our picture regarding forested areas, we can make this easier using a false color image. Vegetetation reflects light in much higher intensities in the near infrared side of the spectrum. To visualize this we can replace the red band in the rgb image with the NIR band (=band 8) "
+   ]
   },
   {
    "cell_type": "code",
@@ -485,6 +625,85 @@
     "fig, ax = plt.subplots()\n",
     "ax.imshow(fc_img)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "histogram(fc_img)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that the NIR values are slightly higher than the ones of the green and blue band. So this time we will change the `pooled` parameter to `False` when incresing the contrast. You can also see the difference when the `pooled` parameter is set to `True`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fc_img_clipped_stretched_false = stretch(auto_clip(np.log(fc_img.copy()), pooled = False), 0, 1, pooled = False)\n",
+    "\n",
+    "fc_img_clipped_stretched_true = stretch(auto_clip(np.log(fc_img.copy()), percentile=0.005, pooled = True), 0, 1, pooled = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "histogram(fc_img_clipped_stretched_false)\n",
+    "histogram(fc_img_clipped_stretched_true)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cloud Filtering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we want to generate an Image which has no clud coverage. To do this we need a few different images from different times. We will then get the median values from each pixel. With this method the Clouds should gone. There might be errors if the selected images all have a very high cloud coverage."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cloudfree_img = ds.median(dim=\"time\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b02 = cloudfree_img['B02'].values\n",
+    "b03 = cloudfree_img['B03'].values\n",
+    "b04 = cloudfree_img['B04'].values\n",
+    "\n",
+    "cloudfree_img_raw = np.stack([b04, b03, b02], axis=2)\n",
+    "cloudfree_img = stretch(auto_clip(np.log(cloudfree_img_raw)),0,1)\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(8,8))\n",
+    "ax.imshow(cloudfree_img)\n",
+    "ax.set_title(\"Cloudfree image\")\n",
+    "ax.set_axis_off()"
    ]
   }
  ],
