--- a/04_eodag_search_post.ipynb
+++ b/04_eodag_search_post.ipynb
@@ -18,6 +18,8 @@
     "\n",
     "from eodag import EODataAccessGateway\n",
     "from eodag import setup_logging\n",
+    "from eodag.crunch import FilterProperty\n",
+    "\n",
     "\n",
     "from rasterio.crs import CRS\n",
     "from rioxarray.merge import merge_arrays\n",
@@ -37,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# EODAG - Search\n",
+    "# EODAG - Search and Post Process\n",
     "\n",
     "EODAG (Earth Observation Data Access Gateway) is a command line tool and a Python package for searching and downloading remotely sensed images while offering a unified API for data access regardless of the data provider.\n",
     "\n",
@@ -154,6 +156,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Folium Map\n",
+    "fmap = folium.Map(location=(np.array([latmin, latmax]).mean(), np.array([lonmin, lonmax]).mean()), zoom_start=9)\n",
+    "folium.Rectangle(bounds=[[latmin, lonmin],[latmax, lonmax]], color=\"red\").add_to(fmap)\n",
+    "folium.GeoJson(\n",
+    "    data=search_results[:],  # SearchResult has a __geo_interface__ interface used by folium to get its GeoJSON representation, single results dont work (this [2:3] instead of [2])\n",
+    "    tooltip=folium.GeoJsonTooltip(fields=[\"title\"])\n",
+    ").add_to(fmap)\n",
+    "fmap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#Plot Quicklooks of Search Results\n",
     "def plot_quicklooks(products):\n",
     "    fig = plt.figure(figsize=(10,8))\n",
@@ -163,33 +181,18 @@
     "        \n",
     "        date = product.properties['startTimeFromAscendingNode'][:16]\n",
     "        provider = product.provider\n",
+    "        tile = product.properties['title'].split('_')[5].lstrip('T')\n",
     "    \n",
     "        # Plot the quicklook\n",
     "        img = mpimg.imread(quicklook_path)\n",
     "        ax = fig.add_subplot(3, 4, i+1)\n",
-    "        ax.set_title(f'Product {i}\\n{date}\\n{provider}')\n",
+    "        ax.set_title(f'Product {i}\\n{date}\\n{provider} - {tile}')\n",
     "        ax.tick_params(top=False, bottom=False, left=False, right=False,\n",
     "                       labelleft=False, labelbottom=False)\n",
     "        plt.imshow(img)\n",
     "    plt.tight_layout()\n",
     "    \n",
     "plot_quicklooks(search_results)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Folium Map\n",
-    "fmap = folium.Map(location=(np.array([latmin, latmax]).mean(), np.array([lonmin, lonmax]).mean()), zoom_start=9)\n",
-    "folium.Rectangle(bounds=[[latmin, lonmin],[latmax, lonmax]], color=\"red\").add_to(fmap)\n",
-    "folium.GeoJson(\n",
-    "    data=search_results[:],  # SearchResult has a __geo_interface__ interface used by folium to get its GeoJSON representation, single results dont work (this [2:3] instead of [2])\n",
-    "    tooltip=folium.GeoJsonTooltip(fields=[\"title\"])\n",
-    ").add_to(fmap)\n",
-    "fmap"
    ]
   },
   {
@@ -227,9 +230,9 @@
     "\n",
     "#Filter already filterd products for online products\n",
     "online_products = filtered_products.filter_online()\n",
-    "print(f\"{len(filtered_products) - len(online_products)} products are offline.\\n{len(online_products)} products are online.\")\n",
+    "print(f\"{len(filtered_products) - len(online_products)} from {len(online_products)} products are offline and have been filtered out.\")\n",
     "\n",
-    "plot_quicklooks(online_products)\n",
+    "#plot_quicklooks(online_products)\n",
     "\n"
    ]
   },
@@ -237,25 +240,99 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 4"
+    "## Step 4 \n",
+    "### Download\n",
+    "\n",
+    "EOProducts can either be downloaded individually with ``download()`` or together with ``download_all()`` from a SearchResult. If the product has already been downloaded and the right directory has been configured, then it will not be downloaded again, as eodag checks for rexisting files."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download multiple Products\n",
+    "products = online_products\n",
+    "paths = dag.download_all(products)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 5"
+    "## Step 5\n",
+    "### Post Process\n",
+    "\n",
+    "Simple Example of an NDVI Image.\n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setting common Parameters for all further image processing\n",
+    "common_params = dict(\n",
+    "    crs=CRS.from_epsg(4326),               # the downloaded images are in 4326, don't reproject them\n",
+    "    resolution=0.0006,                     # but lower their resolution (0.0006 should be 60m in 100km)\n",
+    "    extent=(lonmin,latmin,lonmax,latmax)   # and zoom over/crop the area of interest\n",
+    ")\n",
+    "\n",
+    "# Define basic Functions for future operations\n",
+    "def normalized_difference(a, b):\n",
+    "    return (a - b*1.)/(a + b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load Bands 4 and 8 into memory\n",
+    "RED = products[0].get_data(band=\"B04\", **common_params)\n",
+    "NIR = products[0].get_data(band=\"B08\", **common_params)\n",
+    "\n",
+    "NDVI = normalized_difference(NIR, RED)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot the NDVI Image\n",
+    "NDVI.plot(cmap=\"RdYlGn\", center=False, size=6, aspect='equal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "eoenv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
