--- a/05_eodag_merging.ipynb
+++ b/05_eodag_merging.ipynb
@@ -129,12 +129,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Download Single Product\n",
-    "product = deserialized_search_results[2]\n",
-    "path = dag.download(product)\n",
+    "\n",
     "\n",
     "# Download multiple Products\n",
-    "products = deserialized_search_results[1:3]\n",
+    "products = deserialized_search_results\n",
     "paths = dag.download_all(products)\n"
    ]
   },
@@ -174,11 +172,7 @@
     "\n",
     "# Define basic Functions for future operations\n",
     "def normalized_difference(a, b):\n",
-    "    return (a - b*1.)/(a + b)\n",
-    "\n",
-    "def normalize(a):\n",
-    "    return (a - a.min())/(a.max() - a.min())\n",
-    "    "
+    "    return (a - b*1.)/(a + b)"
    ]
   },
   {
@@ -201,9 +195,9 @@
     "    assets = [file.split('_')[2] for file in jp2_files if file.startswith('T')]\n",
     "    return assets\n",
     "    \n",
-    "    \n",
-    "assets = get_assets(path, res=10)\n",
-    "assets"
+    "\n",
+    "bands_to_load = get_assets(paths[0], res=10)[1:-1]\n",
+    "print(bands_to_load)\n"
    ]
   },
   {
@@ -231,26 +225,12 @@
     "    return ds\n",
     "\n",
     "def load_multiple_timestamps(products, bands:list):\n",
-    "    loaded_data = {}\n",
-    "    # Combine multiple Dataarrays into one Dataset\n",
-    "    for band in bands:\n",
-    "        single_band_ts = []\n",
-    "        # Load one Band of each product and concat them into an xarray Dataarray\n",
-    "        for prod in products: \n",
-    "            data = prod.get_data(band=band, **common_params)\n",
-    "            data = data.squeeze()\n",
+    "    single_ds = []\n",
+    "    for product in products:\n",
+    "        single_product = load_single_product(product=product, bands=bands)\n",
+    "        single_ds.append(single_product)\n",
     "\n",
-    "            time_str = prod.properties['startTimeFromAscendingNode'][:-1] #Remove Timezone info\n",
-    "            date = pd.to_datetime([time_str])\n",
-    "\n",
-    "            data = data.expand_dims(time=date)\n",
-    "            data.name = band\n",
-    "            single_band_ts.append(data)\n",
-    "            \n",
-    "        ts =  xr.concat(single_band_ts, dim='time')\n",
-    "        loaded_data[band] = ts   \n",
-    "\n",
-    "    ds = xr.Dataset(loaded_data)\n",
+    "    ds = xr.merge(single_ds)\n",
     "    return ds"
    ]
   },
@@ -260,8 +240,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Loading multiple Bands into a dataset\n",
-    "ds1 = load_single_product(product=product, bands=['B04', 'B03', 'B02', 'B08', 'TCI'])"
+    "# Loading multiple Bands into a dataset with multiple Timestamps of single Tile\n",
+    "\n",
+    "tile_33UWP = sorted([p for p in products if 'T33UWP' == p.properties['title'].split('_')[5]], key=lambda p: p.properties[\"title\"].split(\"_\")[2])\n",
+    "\n",
+    "ds_33UWP = load_multiple_timestamps(products=tile_33UWP, bands=bands_to_load)\n",
+    "print(f'This dataset from Tile T33UWP has {len(ds_33UWP.time)} timestamps.')"
    ]
   },
   {
@@ -270,15 +254,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Loading multiple Bands into a dataset with multiple Timestamps\n",
-    "ds = load_multiple_timestamps(products=products, bands=['B04', 'B03', 'B02', 'B08', 'TCI'])"
+    "# Loading multiple Bands into a dataset with multiple Timestamps of single Tile\n",
+    "\n",
+    "tile_33UXP = sorted([p for p in products if 'T33UXP' == p.properties['title'].split('_')[5]], key=lambda p: p.properties[\"title\"].split(\"_\")[2])\n",
+    "\n",
+    "ds_33UXP = load_multiple_timestamps(products=tile_33UXP, bands=bands_to_load)\n",
+    "print(f'This dataset from Tile T33UXP has {len(ds_33UXP.time)} timestamps.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The Merging of the datasets (tile_33UXP and tile_33UWP) (each with multiple timestamps on two different tiles) has not yet been implemented."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Merging of Arrays"
+    "#### Merging of single Arrays"
    ]
   },
   {
@@ -294,12 +291,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Sort Products \n",
+    "products = sorted([p for p in deserialized_search_results], key=lambda p: p.properties[\"title\"].split(\"_\")[2])\n",
+    "products[0:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Load Data of Bands 4 and 8. The Images are from the same time, but different tiles.\n",
-    "RED_1 = deserialized_search_results[2].get_data(band=\"B04\", **common_params)\n",
-    "RED_2 = deserialized_search_results[3].get_data(band=\"B04\", **common_params)\n",
+    "RED_1 = products[0].get_data(band=\"B04\", **common_params)\n",
+    "RED_2 = products[1].get_data(band=\"B04\", **common_params)\n",
     "\n",
-    "NIR_1 = deserialized_search_results[2].get_data(band=\"B08\", **common_params)\n",
-    "NIR_2 = deserialized_search_results[3].get_data(band=\"B08\", **common_params)"
+    "NIR_1 = products[0].get_data(band=\"B08\", **common_params)\n",
+    "NIR_2 = products[1].get_data(band=\"B08\", **common_params)"
    ]
   },
   {
@@ -323,11 +331,32 @@
    "source": [
     "merged_ndvi.plot(cmap='RdYlGn', center=False, size=6, aspect='auto')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "eoenv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
